k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htw-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: htw-backend
  template:
    metadata:
      labels:
        app: htw-backend
    spec:
      containers:
      - name: backend
        image: htw-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: htw-backend-service
spec:
  type: ClusterIP
  selector:
    app: htw-backend
  ports:
  - port: 5000
    targetPort: 5000
