k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htw-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: htw-frontend
  template:
    metadata:
      labels:
        app: htw-frontend
    spec:
      containers:
      - name: frontend
        image: htw-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: htw-frontend-service
spec:
  type: NodePort
  selector:
    app: htw-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
